Reduce docker image size to 100MB + application. Use APPLICATIONNAME placeholder in environment variables.